--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@ body {
   background-size: 100%;
   height: 100vh;
 }
+.custom-scrollbar {
+  overflow: scroll;
+}
+.custom-scrollbar::-webkit-scrollbar {
+  width: 0;
+}
